codama-macros/tests/codama_attribute/node_directive/no_node.fail.stderr
error: node is missing
 --> tests/codama_attribute/node_directive/no_node.fail.rs:3:10
  |
3 | #[codama(node())]
  |          ^^^^^^
