codama-macros/tests/codama_attribute/node_directive/no_node.fail.rs
use codama::codama;

#[codama(node())]
pub struct Foo(usize);

fn main() {}
